--- a/config/env.example
+++ b/config/env.example
@@ -20,9 +20,9 @@ MAIL_SERVER=smtp.your-provider.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USE_SSL=False
-MAIL_USERNAME=your-email@example.com
+MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
-MAIL_DEFAULT_SENDER=your-email@example.com
+MAIL_DEFAULT_SENDER=your-email@gmail.com
 
 # Настройки YooKassa (платежи)
 YOOKASSA_SHOP_ID=your-shop-id
